Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-20307

Sherlock branch missing stat "ep_dcp_dead_conn_count"

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 4.1.2
    • 4.1.2
    • couchbase-bucket
    • None
    • Untriaged
    • Unknown

    Description

      Merging sherlock to watson triggered a failure as this stat goes away. Looking at the sherlock branch it appears a previous merge dropped the call to collect this stat from the connection map.

      In watson it appears ep_testsuite is more sensitive to the stat going away, hence the sherlock->watson merge triggers a failure, yet sherlock doesn't fail.

      ee1129699abfbbc4485f3c2ec2a9c4a53eb8a478 appears to have removed the stat call.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jwalker Jim Walker
            jwalker Jim Walker
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                PagerDuty