src/connmap.h
@@ -519,6 +519,8 @@ public:
      */
     void consumerBatchSizeConfigChanged(size_t newValue);
 
+    void addStats(ADD_STAT add_stat, const void *c);
+
 protected:
 
     bool isPassiveStreamConnected_UNLOCKED(uint16_t vbucket);
